take the core to an awesome adventure
add support for adventure and started tagresolving